# Cadence

./: CMakeLists.txt  project.cpp  project.h  project.ui
src/: project.h
src/engine/backends/: rtaudiobackend.cpp  rtaudiobackend.h
src/engine/backends/linux/: linuxbackend.cpp  linuxbackend.h
src/engine/common/: audiobackend.h  audioconfig.h  audiodevice.h  audioerror.h
src/engine/devices/: rtaudiodevice.cpp  rtaudiodevice.h
src/engine/tests/: audiobackendtest.cpp  audiobackendtest.h  audiodevicetest.h
